- New methods 'all' and 'any' for 'validation' objects
- New 'plot' method for 'validator' objects.
- New 'plot' method for 'validation' objects.
- New 'as.data.frame' methods for 'validatorComparison' and 'cellComparison' 
  objects.
- New 'plot' method for 'validatorComparison' and 'cellComparison' objects.
- New 'barplot' method for 'validatorComparison' and 'cellComparison' objects.
- Bugfixes in 'cells' and 'compare'.
- The row order of output in 'cells' has changed to be more consistent with 
  row order in the output of 'compare'.
- The row 'new_missing' is renamed 'removed' in 'cellComparison' objects.
- Improved cross-references in reference manual


version 0.2.5
- Documentation updates (Thanks to Matthias Gomolka)
- Removed deprecated functions 'number_missing', 'fraction_missing', 
  'row_missing', 'number_unique', 'any_dunplicated', 'any_missing'.
- Bugfix: the 'call' object in a 'confrontation' object was created incorrectly.
  This only affects printing.


version 0.2.4
- New set membership operator "%vin%", behaving consistently with "=="
- Set membership operator %in% is now replaced with %vin% (#80).
- Added `[[<-` and `[<-` methods for validator objects.
- Validation rules can now be endowed with user-defined metadata, see ?meta (#59).
- fixed (harmless) compiler warning (thanks to Brian Ripley)
- bugfix: empty [] selection on expressionset crashed (thanks to Anne Petersen)
- bugfix: NA in validating expression would crash parser (thanks to Masafumi Okada)


version 0.2.0
- new object of class 'indicator'
- validation rules now support if-then-else syntax.
- validaton rules can now contain embedded if-statements, e.g. A | (if (B) C)
- expressionset objects (validator, indicator) can be combined using '+'
- results of getter functions (e.g. 'labels') are now named.
- less verbose printng of options for expressionset objects (validator, indicator)
- expressionset objects (validator, indicator) can now be coerced to as.data.frame.